# demo_structure_project

./: .gitignore  build.gradle.kts  generate_feature.sh  local.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  google-services.json
app/src/androidTest/java/com/example/demo/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/emailverificationauthenticationviaapi/: ExampleInstrumentedTest.kt
app/src/dev/cpp/: secrets.cpp
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/demo/: AuthApp.kt  MainActivity.kt
app/src/main/java/com/example/demo/graphs/: AuthNavGraph.kt  MainNavGraph.kt  RootNavGraph.kt
app/src/main/java/com/example/demo/preferences/: SharedPrefs.kt
app/src/main/java/com/example/demo/presentation/: MainScreen.kt  ScreenContent.kt
app/src/main/java/com/example/demo/service/: PushNotificationService.kt
app/src/main/java/com/example/demo/util/: AppSecretManager.kt  AuthStateManager.kt  BaseResult.kt
app/src/main/java/com/example/emailverificationauthenticationviaapi/: AuthApp.kt  MainActivity.kt
app/src/main/java/com/example/emailverificationauthenticationviaapi/graphs/: AuthNavGraph.kt  MainNavGraph.kt  RootNavGraph.kt
app/src/main/java/com/example/emailverificationauthenticationviaapi/preferences/: SharedPrefs.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/preprod/cpp/: secrets.cpp
app/src/production/cpp/: secrets.cpp
app/src/staging/cpp/: secrets.cpp
app/src/test/java/com/example/emailverificationauthenticationviaapi/: ExampleUnitTest.kt
(+100 files in other folders)
